fix for IE footer logo stretch

--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -312,6 +312,7 @@ footer {
 
       img {
         max-width: 300px;
+        height: 100%;
       }
     }
   }
@@ -386,6 +387,7 @@ footer {
 
       img {
         max-width: 300px;
+        height: 100%;
       }
     }
 
